--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "homepage": "https://github.com/kfaubel/mlbinfo#readme",
   "main": "./mlbinfo.js",
-  "types": "./mlbnfo.d.ts",
+  "types": "./mlbinfo.d.ts",
   "scripts": {
     "start": "tsc && node sample.js",
     "test": "tsc && node sample.js && jest --coverage mlbinfo.test.ts",
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
+    "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
